test/date/SPtests/RFC822/valid/43.php
<?php

$date = 'Fri(day), 05 Nov(ember) 94 13:15:30 GMT';
$expected = 784041330;

?>