test/date/SPtests/RFC822/invalid/invalid_day.php
<?php

// Invalid (French) day

$date = 'Vendredi, 05 Nov 94 13:15:30 GMT';
$expected = 784041330;

?>